--- a/OurChatForm/Properties/Resources.resx
+++ b/OurChatForm/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Chattify-logo-vit2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Chattify-logo-vit.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Chattify-logo-vit1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Chattify-logo-vit1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="chattifyVitLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\chattifyVitLogo.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -127,7 +133,7 @@
   <data name="Chattify-logo-vit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Chattify-logo-vit.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Chattify-logo-vit1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Chattify-logo-vit1.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Chattify-logo-vit3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Chattify-logo-vit1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
